# huddle

./: .gitignore  AGENTS.md  CLAUDE.md  NFLHEADCOACH09DETAILS.md  README.md  debug_moves.py  debug_qb_targeting.py  debug_run_regression.py  debug_sim.py  debug_sim2.py  debug_v2_full_play.py  demo.py  demo_integrated_sim.py  demo_route_sim.py  docker-compose.yml  game_summary.md  pyproject.toml  session-ses_4a31.md  test_historical_sim.py  test_passing_integration.py  verify_v2_fixes.py  visualizer.py
.claude/agents/: sim-gameplay-analyst.md
agentmail/: API_CHEATSHEET.md  CLAUDE_AGENT_GUIDE.md  README.md  dashboard.html  sdk.py  to_simulation_agent_approval.md  to_simulation_agent_gameprep.md
docs/: ARCHITECTURE.md  CODEBASE_REFERENCE.md  DESIGN_PHILOSOPHY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SIM_EXPLORER_CHANGELOG.md  V3_ANALYSIS.md  V3_CASE_AGAINST.md  V3_CASE_FOR.md  WEEKLY_GAMEPLAY_GAP_ANALYSIS.md  simulation_v2_design.md  tui-design-guide.md
frontend/: package-lock.json  package.json
huddle/: __init__.py  __main__.py
research/: README.md
scripts/: scrape_nfl_logos.py  team_narrative.py  test_graph_sync.py
sprite-pipeline/: cli.py  config.py
tests/: conftest.py  test_approval.py  test_blocking_behaviors.py  test_brain_context_integration.py  test_development.py  test_game_integration.py  test_game_prep.py  test_mental_state.py  test_philosophy.py  test_play_sim_scenarios.py  test_playbook.py  test_qb_staring_breakpoint.py  test_read_system.py  test_run_game_brains.py  test_scout_biases.py  test_scouting.py  test_trade_market.py
(+1723 files in other folders)
