[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huddle"
version = "0.1.0"
description = "American football management game simulator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Thomas Morton" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
huddle = "huddle.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["huddle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
